--- a/BillSplit/Base.lproj/Main.storyboard
+++ b/BillSplit/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina5_9" orientation="portrait">
+    <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,72 +15,88 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="BillSplit" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="appBg" translatesAutoresizingMaskIntoConstraints="NO" id="7DS-m4-wvI">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="appBg" translatesAutoresizingMaskIntoConstraints="NO" id="M1Z-Uh-5Ae">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bill Splitter" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="89W-C1-RBb">
-                                <rect key="frame" x="93.666666666666686" y="138.33333333333334" width="188" height="45.666666666666657"/>
-                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="39"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bill Splitter" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ClM-Va-3db">
+                                <rect key="frame" x="40" y="183" width="334" height="54.666666666666657"/>
+                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="40"/>
+                                <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <stackView opaque="NO" contentMode="scaleAspectFill" axis="vertical" distribution="fillProportionally" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="9Q2-BL-pJ0">
-                                <rect key="frame" x="50" y="284" width="275" height="244"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="ESF-EW-5yS">
+                                <rect key="frame" x="40" y="292.66666666666669" width="334" height="130.66666666666669"/>
                                 <subviews>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BSW-hB-HNF">
-                                        <rect key="frame" x="0.0" y="0.0" width="275" height="104"/>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Input Bill Amount" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="FFy-Gl-Y9t">
+                                        <rect key="frame" x="0.0" y="0.0" width="334" height="42.666666666666664"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="42.670000000000002" id="Q7L-wB-3rr"/>
+                                        </constraints>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                     </textField>
-                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="Y48-VS-5QS">
-                                        <rect key="frame" x="0.0" y="124" width="275" height="120"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="iZa-Kz-Cpu">
+                                        <rect key="frame" x="0.0" y="52.666666666666629" width="334" height="78"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$0.00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6GE-jt-kK6">
-                                                <rect key="frame" x="0.0" y="0.0" width="127.66666666666667" height="120"/>
-                                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                                <size key="shadowOffset" width="0.0" height="1"/>
-                                            </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$0.00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZXa-sQ-IQx">
-                                                <rect key="frame" x="147.66666666666666" y="0.0" width="127.33333333333334" height="120"/>
-                                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="$0.00" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="4ab-pb-qEk">
+                                                <rect key="frame" x="0.0" y="0.0" width="159.66666666666666" height="78"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="78" id="NhE-bV-px0"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                            </textView>
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="$0.00" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="cOb-Y7-86u">
+                                                <rect key="frame" x="174.66666666666663" y="0.0" width="159.33333333333337" height="78"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                            </textView>
                                         </subviews>
                                     </stackView>
                                 </subviews>
                             </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bsz-M8-Tzc">
+                                <rect key="frame" x="40" y="670" width="334" height="30"/>
+                                <color key="backgroundColor" red="0.81955032360000002" green="0.92357321150000005" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <state key="normal" title="Get Bill"/>
+                                <connections>
+                                    <action selector="getBill:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Fkm-Xr-JA0"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="89W-C1-RBb" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="0dk-sh-t5C"/>
-                            <constraint firstItem="7DS-m4-wvI" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="4vX-us-xOf"/>
-                            <constraint firstItem="7DS-m4-wvI" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="GAf-iD-9CD"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="9Q2-BL-pJ0" secondAttribute="bottom" constant="250" id="KEk-rQ-qh2"/>
-                            <constraint firstItem="7DS-m4-wvI" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="P1T-qN-X2R"/>
-                            <constraint firstItem="9Q2-BL-pJ0" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Z3t-D0-Mz6"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="9Q2-BL-pJ0" secondAttribute="trailing" constant="50" id="jsX-0P-IZy"/>
-                            <constraint firstItem="9Q2-BL-pJ0" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="mVR-zy-Fe8"/>
-                            <constraint firstItem="7DS-m4-wvI" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="oxg-WH-MLw"/>
-                            <constraint firstItem="9Q2-BL-pJ0" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="t04-uA-LLT"/>
-                            <constraint firstAttribute="bottom" secondItem="7DS-m4-wvI" secondAttribute="bottom" id="uNM-8u-QAn"/>
-                            <constraint firstItem="7DS-m4-wvI" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ywO-rB-zBR"/>
-                            <constraint firstItem="9Q2-BL-pJ0" firstAttribute="top" secondItem="89W-C1-RBb" secondAttribute="bottom" constant="100" id="zcS-ne-CcT"/>
+                            <constraint firstItem="ClM-Va-3db" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="1qP-Mb-nRr"/>
+                            <constraint firstItem="ClM-Va-3db" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="163" id="6cO-rl-EoH"/>
+                            <constraint firstItem="Bsz-M8-Tzc" firstAttribute="trailing" secondItem="ESF-EW-5yS" secondAttribute="trailing" id="G4W-Jg-nEI"/>
+                            <constraint firstItem="M1Z-Uh-5Ae" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="HFe-Hf-ovH"/>
+                            <constraint firstItem="ESF-EW-5yS" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="LST-NO-8eq"/>
+                            <constraint firstItem="ClM-Va-3db" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="N5k-Bc-f7i"/>
+                            <constraint firstItem="M1Z-Uh-5Ae" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="QN2-WZ-TzW"/>
+                            <constraint firstItem="M1Z-Uh-5Ae" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="TVG-Rl-kvV"/>
+                            <constraint firstItem="ESF-EW-5yS" firstAttribute="top" secondItem="ClM-Va-3db" secondAttribute="bottom" constant="55" id="Wj7-3h-yZp"/>
+                            <constraint firstAttribute="bottom" secondItem="M1Z-Uh-5Ae" secondAttribute="bottom" id="Zhs-iD-Q3P"/>
+                            <constraint firstItem="ESF-EW-5yS" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="eiO-mk-eb2"/>
+                            <constraint firstItem="Bsz-M8-Tzc" firstAttribute="leading" secondItem="ESF-EW-5yS" secondAttribute="leading" id="fRE-GH-x9J"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Bsz-M8-Tzc" secondAttribute="bottom" constant="36" id="qSm-Io-8mi"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="bill1" destination="4ab-pb-qEk" id="puL-Fm-wK0"/>
+                        <outlet property="bill2" destination="cOb-Y7-86u" id="XHJ-kM-bIV"/>
+                        <outlet property="billInput" destination="FFy-Gl-Y9t" id="xgu-WL-sT2"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="137.68115942028987" y="129.91071428571428"/>
+            <point key="canvasLocation" x="136.80000000000001" y="128.57142857142858"/>
         </scene>
     </scenes>
     <resources>
